# k4sme.ai4sdw.ai

./: Dockerfile  pyproject.toml
ai4sdw/: ai.py  enteater.py  log.py  main.py  ngsy.py  utils.py
ai4sdw/fall_detector/: best.pth  detect.py
ai4sdw/line_crossing/: detect.py
ai4sdw/pandemic_monitoring/: detect.py
roughnator/: config.py  enteater.py  log.py  main.py  ngsy.py
runner_alone/: fiware_alone.py  runner_alone.py
tests/sim/: dazzler-config.yaml  docker-compose.yml  runner.py  runner_nodocker.py
tests/util/: fiware.py  sampler.py
