[tool.poetry]
name = "ai4sdw"
version = "0.1.0"
description = "ai4sdw services"
authors = ["berserkrambo"]

[tool.poetry.dependencies]
python = "^3.9.12"
numpy = "1.23.2"
pyaml = "21.10.1"
opencv-python-headless = "4.5.4.60"
fastapi = "^0.73.0"
fipy = {git = "https://github.com/c0c0n3/kitt4sme.fipy.git", tag = "0.9.0"}
requests = "^2.27.1"
uri = "^2.0.1"
pydantic = "^1.9.0"
path = "16.4.0"
torch = { url = "https://download.pytorch.org/whl/cpu/torch-1.13.0%2Bcpu-cp39-cp39-linux_x86_64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cpu/torchvision-0.14.0%2Bcpu-cp39-cp39-linux_x86_64.whl"}

uvicorn = {extras = ["standard"], version = "^0.17.6"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
